# Nanairo

./: .gitignore  .gitmodules  Acknowledgement.md  CMakeLists.txt  LICENSE  MIT-LICENSE.txt  README.md
cmake/: assimp.cmake  compiler.cmake  document.cmake  general.cmake  keyword.cmake  option.cmake  packaging.cmake  project.cmake  qt5.cmake  test.cmake
documents/: Doxyfile.in
packaging/: dependencies.cmake  icon.icns  icon.pxm  linux_exec_script.sh.in  linux_install_script.cmake.in  mac_exec_script.sh.in  mac_install_script.cmake.in  mac_plist.in  windows_exec_script.cmd.in  windows_install_script.cmake.in
resources/: resource.qrc
resources/font/: Inconsolata.tar.xz  Open_Sans.tar.xz
resources/scene/: CausticsTest.nana  ColorChecker-Spectrum.nana  ColorChecker-sRGB.nana  CornellBox.nana  DefaultScene.nana  DispersionTest.nana  FitnessRoom.nana  JensenCornellBox.nana  MaterialTest.nana  PrivateRoom.nana  RaytracingCamp4.nana  SurfaceTest-Cloth.nana  SurfaceTest-LayeredDiffuse.nana  SurfaceTest-RoughConductor.nana  SurfaceTest-RoughDielectric.nana  SurfaceTest-SmoothConductor.nana  SurfaceTest-SmoothDielectric.nana  SurfaceTest-SmoothDiffuse.nana  VeachBdptTest.nana  VeachMisTest.nana
resources/spectrum/conductor/: Ag extinction coefficient.csv  Ag refractive index.csv  Al extinction coefficient.csv  Al refractive index.csv  Au extinction coefficient.csv  Au refractive index.csv  BK7 extinction coefficient.csv  BK7 refractive index.csv  Co extinction coefficient.csv  Co refractive index.csv  Cr extinction coefficient.csv  Cr refractive index.csv  Cu extinction coefficient.csv  Cu refractive index.csv  Fe extinction coefficient.csv  Fe refractive index.csv  ITO extinction coefficient.csv  ITO refractive index.csv  Ni extinction coefficient.csv  Ni refractive index.csv  Pt extinction coefficient.csv  Pt refractive index.csv  Si extinction coefficient.csv  Si refractive index.csv  W extinction coefficient.csv  W refractive index.csv
resources/spectrum/dielectric/: Air.csv  Al2O3.csv  F2.csv  H2O.csv  PET.csv  Quartz.csv  SiO2.csv  diamond.csv
resources/spectrum/illuminant/: cie_si_a.csv  cie_si_d65.csv  cornell_box_light.csv  f1.csv  f10.csv  f11.csv  f12.csv  f2.csv  f3.csv  f4.csv  f5.csv  f6.csv  f7.csv  f8.csv  f9.csv  mercury_vapor_lamp.csv
resources/spectrum/observer/: cie_1931_blue.csv  cie_1931_green.csv  cie_1931_red.csv  cie_sco_10degree_ybar.csv  cie_sco_10degree_zbar.csv  cie_sco_2degree_xbar.csv  cie_sco_2degree_ybar.csv  cie_sco_2degree_zbar.csv
resources/spectrum/reflectance/: cornell_box_green.csv  cornell_box_red.csv  cornell_box_white.csv  macbeth_01_dark_skin.csv  macbeth_02_light_skin.csv  macbeth_03_blue_sky.csv  macbeth_04_foliage.csv  macbeth_05_blue_flower.csv  macbeth_06_bluish_green.csv  macbeth_07_orange.csv  macbeth_08_purplish_blue.csv  macbeth_09_moderate_red.csv  macbeth_10_purple.csv  macbeth_11_yellow_green.csv  macbeth_12_orange_yellow.csv  macbeth_13_blue.csv  macbeth_14_green.csv  macbeth_15_red.csv  macbeth_16_yellow.csv  macbeth_17_magenta.csv  macbeth_18_cyan.csv  macbeth_19_white.csv  (+5 more)
source/: document.dox  main.cpp  nanairo.cpp  simple_nanairo.cpp  simple_renderer-inl.hpp  simple_renderer.cpp  simple_renderer.hpp
source/NanairoCommon/: config.cmake  keyword.hpp.in  nanairo_common_config-inl.hpp.in  nanairo_common_config.hpp  nanairo_common_config.hpp.in
source/NanairoCore/: config.cmake  nanairo_core_config-inl.hpp.in  nanairo_core_config.hpp.in  scene-inl.hpp  scene.cpp  scene.hpp  system-inl.hpp  system.cpp  system.hpp  world-inl.hpp  world.cpp  world.hpp
source/NanairoGui/: NButtonStyle.qml  NBvhTabItem.qml  NBvhTabItem.qml.in  NCameraTabItem.qml  NCheckBoxStyle.qml  NColorTabItem.qml  NColorTabItem.qml.in  NColorView.qml  NComboBoxStyle.qml  NEmitterModelTabItem.qml  NEmitterModelTabItem.qml.in  NGroupObjectTabItem.qml  NImageButtonStyle.qml  NLogView.qml  NMainWindow.qml  NMainWindow.qml.in  NObjectSettingView.qml  NObjectTabItem.qml  NObjectTabItem.qml.in  NObjectTreeView.qml  NObjectView.qml  NRenderedImageCanvas.qml  NRenderedImageWindow.qml  NRenderedImageWindow.qml.in  NRenderingMethodTabItem.qml  NRenderingMethodTabItem.qml.in  NRgbColorPalette.qml  NSceneSettingView.qml  NSceneSettingView.qml.in  NSceneTabItem.qml.in  NSettingView.qml  NSpectraFileView.qml  NSpinBoxButtonStyle.qml  NSpinBoxStyle.qml  NSurfaceModelTabItem.qml  NSurfaceModelTabItem.qml.in  NSystemTabItem.qml  NSystemTabItem.qml.in  NTabViewStyle.qml  NTextFieldStyle.qml  (+17 more)
source/NanairoRenderer/: camera_event-inl.hpp  camera_event.hpp  config.cmake  cpu_scene_renderer.cpp  cpu_scene_renderer.hpp  cui_renderer_manager.cpp  cui_renderer_manager.hpp  nanairo_renderer_config-inl.hpp.in  nanairo_renderer_config.hpp  nanairo_renderer_config.hpp.in  renderer_parameter.cpp  renderer_utility-inl.hpp  renderer_utility.hpp  scene_document.cpp  scene_document.hpp  scene_renderer_base-inl.hpp  scene_renderer_base.cpp  scene_renderer_base.hpp
source/SimpleRenderer/: simple_progress_bar-inl.hpp  simple_progress_bar.cpp  simple_progress_bar.hpp  simple_renderer-inl.hpp  simple_renderer.cpp  simple_renderer.hpp
source/zisc/: config.cmake  document.dox
test/: config.cmake
test/UnitTest/: camera_model_test.cpp  microfacet_ggx_test.cpp  sampling_wavelength_test.cpp  sensor_test.cpp  sensor_test.hpp  shader_model_test.cpp  shader_model_test.hpp  surface_model_test.cpp  test.cpp  test.hpp
test/resources/: test_cloth_surface.json  test_layered_diffuse_surface.json  test_pinhole_camera.json  test_resource.qrc  test_rough_conductor_surface.json  test_smooth_diffuse_surface.json  test_system.json
test/unittest/: camera_model_test.cpp  microcylinder_test.cpp  microfacet_ggx_test.cpp  morton_code_test.cpp  rendering_tile_test.cpp  sampling_wavelength_test.cpp  sensor_test.cpp  sensor_test.hpp  shader_model_test.cpp  shader_model_test.hpp  shape_test.cpp  smooth_mesh_test.cpp  surface_model_test.cpp  test.cpp  test.hpp  transformation_test.cpp
tool/: blender_scene_exporter.py
tool/spectral_transport/: spectral_transport.py
tools/windows/: Nanairo.bat
(+942 files in other folders)
